# blueprint

./: .pylintrc  README.md  pyproject.toml
.github/workflows/: arc-test.yml  mypy.yml  pylint.yml  test.yml
src/blueprint/: __init__.py
src/blueprint/cli/: app.py
src/stubs/i3ipc/: con.pyi
