[tool.poetry]
name = "blueprint"
version = "0.1.0"
description = "I3 / Sway layout saver / creator"
authors = ["Sean Collings <seanrcollings@gmail.com>"]
license = "MIT"
packages = [
    {include = "blueprint", from = "src"}
]


[tool.poetry.dependencies]
python = "^3.9"
arc-cli = "^4.0.0"
i3ipc = "^2.2.1"
PyYAML = "^5.4.1"
result = "^0.6.0"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.800"
pylint = "^2.7.0"
pytest = "^6.2.4"
types-PyYAML = "^0.1.5"

[tool.poetry.scripts]
blueprint = "blueprint.cli.__init__:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
